--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,3 @@
 node_modules
-assets/compressed/*
-assets/images/*
+assets/compressed/*.png|.webp|.jpg|.jpeg|.gif|.svg
+assets/images/*.png|.webp|.jpg|.jpeg|.gif|.svg
